# tablite

./: LICENSE  README.md  components.json  eslint.config.js  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: publish.yml
app/: app.vue  types.ts
app/components/: AsssistantPopover.vue  CardSpotlight.vue  ConnectionCard.vue  DatabaseLogo.vue  DbLogo.vue  GlowBorder.vue  HyperText.vue  MySQL.vue  Postgres.vue  ProtocolLogo.vue  Sqlite.vue  TableDataGrid.vue  TableFilter.vue  TableGrid.vue  TableSelector.vue  TextHoverEffect.vue  TitleBar.vue  VirtualGrid.vue  VirtualGridBodyCell.vue  VirtualGridHeaderCell.vue  VisTable.vue
app/composables/: use-mdit.ts  useAgent.ts  useAi.ts  useAssistant.ts  useConnection.ts  useContext.ts  useDatabase.ts  useLlm.ts  usePrompt.ts  useQuery.ts  useSelect.ts  useStepper.ts  useTable.ts  useTableChanges.ts  useTables.ts  useTauri.ts  useText2Sql.ts  useText2SqlV2.ts
app/pages/: [id].vue  index.vue
app/stores/: assistant.ts  connection.ts  settings.ts
app/utils/: agent.ts  assistant.ts  common.ts  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/tauri-plugin-sql-extra/: Cargo.toml  build.rs
src-tauri/crates/tauri-plugin-sql-extra/permissions/: default.toml
src-tauri/crates/tauri-plugin-sql-extra/permissions/autogenerated/: reference.md
src-tauri/crates/tauri-plugin-sql-extra/permissions/schemas/: schema.json
src-tauri/crates/tauri-plugin-sql-extra/src/: commands.rs  error.rs  lib.rs  wrapper.rs
src-tauri/crates/tauri-plugin-sql-extra/src/decode/: any.rs  mod.rs
(+42 files in other folders)
